Buildable front and serve static files on backend
